--- a/Strong-Password-Gen/public/index.html
+++ b/Strong-Password-Gen/public/index.html
@@ -11,9 +11,7 @@
   <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
     <!-- Credit Tag -->
     <div class="bottom-0 fixed py-4 w-full z-10 text-center">
-      <p class="">
-        &copy; <span id="year"></span> — made by 0dd
-      </p>
+      <p class="">&copy; <span id="year"></span> — made by 0dd</p>
     </div>
     <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full">
       <h1 class="text-2xl font-bold text-gray-800 mb-6 text-center">
@@ -118,7 +116,9 @@
           Generate Password
         </button>
         <a
-          href="#"
+          href="https://github.com/0ddFl3xx/vanilla-js/tree/main/Strong-Password-Gen"
+          target="_blank"
+          rel="noopener noreferrer"
           class="w-full text-center border border-blue-600 text-blue-600 py-3 px-4 rounded-full font-medium hover:bg-blue-900 hover:text-white transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
           View Source Code (Github)
         </a>
